css/home-page.css
body {
    background-color: #121212;
}
.appear {
    animation-name: appear;
    animation-duration: 1s;
    transform: translateY(0);
}
.pop-up {
    animation-name: popup;
    animation-duration: 1.5s;
    animation-delay: 0.5s;
    opacity: 0;
    animation-fill-mode: forwards;
}
.pop-down {
    animation-name: popdown;
    animation-duration: 1.2s;
    animation-delay: 0.8s;
    opacity: 0;
    transform: translateY(0px);
    animation-fill-mode: forwards;
}
@media (max-width: 2000px) {
    .pop-up {
        animation-name: popup2;
    }
}
@media (max-width: 1600px) {
    .pop-up {
        animation-name: popup3;
    }
}
@keyframes popdown {
    from {
        opacity: 0;
        transform: translateY(-50px)
    }
    to {
        opacity: 1;
        /* top: 0;
        transform: translateY(0) */
    }
}
@keyframes popup {
    from {
        /* opacity: 0; */
        transform: scale(1) translateY(100px)
    }
    to {
        opacity: 1;
    }
}
@keyframes popup2 {
    from {
        /* opacity: 0; */
        transform: scale(0.8) translateY(100px)
    }
    to {
        opacity: 1;
    }
}
@keyframes popup3 {
    from {
        /* opacity: 0; */
        transform: scale(0.7) translateY(100px)
    }
    to {
        opacity: 1;
    }
}
@keyframes appear {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.blob-phone, .blob {
    filter: blur(100px);
    opacity: 0.7;
}
@media only screen and (max-width: 500px) {
    .blob-phone, .blob {
        filter: blur(10px);
        opacity: 0.7;
    }
}

.hello {
    font-family: poppins, arial, sans-serif;
    font-weight: 700;
}
.hero-text {
    color: rgba(255, 255, 255, 0.9);
    top: calc(40px + 1.3em);            
}
.intro-desc {
    font-weight: 300;
}
.go-to-works {
    color: rgba(255, 255, 255, 0.9);
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    justify-content: center;
    position: absolute;
    left: 0;
}
.scroll {
    margin: 0;
}
.header-bar {
    background-color: rgba(0, 0, 0, 0.362);
    border-color: rgba(255, 255, 255, 0.116);
    background-color: rgba(0, 0, 0, 0);
    border: none;
    backdrop-filter: blur(0);
    -webkit-backdrop-filter: blur(0);
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.399) 0%, rgba(0, 0, 0, 0.00) 100%);
}
.logo, .nav-bar p, .nav-bar a{
    color: rgba(255, 255, 255, 0.9);
    font-weight: 300;
    font-weight: 400;
}
.hamburger .line {
    background-color: rgba(255, 255, 255, 0.9)!important;
}
.hover-underline-animation:after {
    background-color: rgba(255, 255, 255, 0.9);
}

.footer {
    background-color: rgb(22, 22, 22);
    color: rgba(255, 255, 255, 0.9);
    border-color: rgba(255, 255, 255, 0.116);
}
@media only screen and (min-width: 900px) {
    .header-bar {
        padding-top: 20px;
        padding-bottom: 20px!important;
        padding-bottom: 40px!important;
    }
    .right-btn {
        margin-right: 4rem;
        margin-right: 0;
    }
    .logo {
        margin-left: 4rem;
        margin-left: 0;
    }
    .nav-bar li div p, .nav-bar a {
        text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.641);
    }
}
@media only screen and (max-width: 900px) {
    .nav-bar.black {
        background-color: rgb(0, 0, 0);
    }
    .margins .dropdown-content .list-item {
        color: rgba(255, 255, 255, 0.593);
    }
    
}

.project {
    width: fit-content;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    /* background-color: blue; */
    column-gap: 90px;
    margin-top: 70px;
    margin-bottom: 50px;
    transition: transform 0.3s;
}
.reverse {
    flex-direction: row-reverse;
    /* background-color: purple; */
}
.v3 {
    width: 620px;
    height: 410px;
    background: radial-gradient(134.70% 67.69% at 48.87% 48.78%, #38ABC6 0%, #1F6B7C 100%);
    border-radius: 12px;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: transform 0.3s;
}
.cinema {
    background: radial-gradient(96.94% 45.45% at 63.21% 57.38%, #A04040 0%, #762121 100%), linear-gradient(223deg, #FFC3CE 0%, rgba(255, 174, 188, 0.00) 100%), #C95959;
}
.unio {
    background: radial-gradient(154.79% 80.04% at 49.92% 54.66%, #9761DE 0%, #53357B 100%), linear-gradient(223deg, #FFC3CE 0%, rgba(255, 174, 188, 0.00) 100%), #C95959;
}
.pega {
    background: radial-gradient(50% 50.00% at 50% 50.00%, #333B77 0%, #1F2656 100%), linear-gradient(223deg, #FFC3CE 0%, rgba(255, 174, 188, 0.00) 100%), #C95959;
}
.pega .phone {
    mix-blend-mode: lighten;
}
.v3:hover .phone{
    /* transform: translateY(-10px);
    transition: transform 0.3s; */
    transform: scale(1.05);
    transition: 0.4s;
}
.phone {
    width: 350px;
    height: 100%;
    object-fit:contain;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.4s;
}
p, .read-more{
    color: white;
    font-family: lexend, Arial, Helvetica, sans-serif;
    margin: 0;
}
.text {
    width: 480px;
    /* background-color: purple; */
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
    row-gap: 24px;
}
.app-name {
    font-size: 14px;
    font-weight: 300;
    letter-spacing: 1px;
    color: rgba(255, 255, 255, 0.662);
    /* background-color: pink; */
}
.headline {
    font-size: 35px;
    font-size: 45px;
    font-size: 35px;
    font-weight: 700;
    font-weight: 600;
    font-family: 'Cormorant Garamond', serif;
    font-family: 'DM Serif Text', serif;
    /* font-family: 'Noto Serif Display', serif; */
    font-weight: 400;
    font-weight: 500;
    font-style: italic;
    /* text-transform: uppercase; */
    /* background-color: orange; */
}

.message {
    font-size: 18px;
    /* background-color: purple */
    line-height: 30px;
    font-weight: 300;
}
.read-more {
    text-decoration: none;
    padding: 10px 20px;
    border: solid 1px white;
    border-radius: 8px;
    width:fit-content;
    transition: 0.3s;
}
.read-more:hover {
    background-color: rgba(255, 255, 255, 0.819);
    color: #0e0e03;
    transition: 0.3s;
}
@media only screen and (max-width: 700px) {
    .headline {
        font-size: 35px;
    }
    .message {
        font-size: 17px;
    }
    .app-name {
        font-size: 12px;
    }
    .text {
        row-gap: 20px;
    }
    .project {
        margin-bottom: 20px;
    }
}
@media only screen and (max-width: 1700px) {
    .v3, .text {
        width: 500px;
    }
}
@media only screen and (max-width: 1300px) {
    .project {
        flex-direction: column;
        row-gap: 50px;
    }
    
}
@media only screen and (max-width: 720px) {
    .v3, .text {
        width: 320px;
    }
    .v3 {
        height: 230px;
    }
    .phone {
        width: 250px;
        height: 100%;
        object-fit:contain;
        margin: auto;
        display: flex;
        align-items: center;
        justify-content: center;
    }
}
.blob-phone {
    mix-blend-mode: lighten;
    opacity: 0.6
}
.texture {
    position: absolute;
    z-index: 1;
    mix-blend-mode: soft-light;
    width: 100vw;
    height: 120vh;
    object-fit: cover;
    opacity: 0.5;
}
.hero-text {
    /* background-color: purple; */
    max-width: none;
    align-items: center;
    top: 0px;
    height: 100%;
}

@font-face {
    font-family: Akira;
    src: url(images/Akira.otf);
}
@font-face {
    font-family: Korsson;
    src: url(images/KORSSON.otf);
}
.hero-text h1 {
    font-family: 'Cormorant Garamond', serif;
    font-family: 'DM Serif Text', serif;
    /* font-family: 'Noto Serif Display', serif; */
    /* font-family: 'Akira', sans-serif; */
    /* font-family: 'Korsson', sans-serif; */
    /* -webkit-text-stroke: 1px rgb(255, 255, 255); */
    color: white;
    /* color: rgba(255, 255, 255, 0); */
    font-size: 85px;
    font-style: italic;
    font-size: 100px;
    font-size: 80px;
    line-height: 90px;
    font-weight: 300;
    font-weight: 400;
    /* font-weight: 500; */
    /* background-color: pink; */
    margin: 16px 0;
    text-align: center;
}

.hero-text p {
    margin: 0;
    font-size: 28px;
    font-weight: 300;
    max-width: 510px;
    text-align: center;
    line-height: 38px;
}

.hero-text .role {
    font-size: 22px;
    font-weight: 500;
}
@media only screen and (max-width: 2000px) {
    .hero-text {
        transform: scale(0.8);
    }
}
@media only screen and (max-width: 1600px) {
    .hero-text {
        transform: scale(0.7);
    }
}
@media only screen and (max-width: 600px) {
    .hero-text h1{
        font-size: 58px;
        font-size: 70px;
        line-height: 70px;
        font-size: 65px;
    }
    .hero-text p {
        margin: 0;
        font-size: 25px;
    }
    .hero-text .role {
        margin: 0;
        font-size: 20px;
    }
}
/* .left-section a {
    font-family: 'Cormorant Garamond', serif;
    font-weight: 300;
    font-size: 20px;
} */
.WORKS-container .scroll {
    font-size: 14px;
    margin-right: 0;
    color: rgb(255, 255, 255);
    transform: scaleY(1);
    transition: transform 0.3s;
}
.WORKS-container {
    display: flex;
    gap: 8px;
    /* border: 1px white solid; */
    justify-content: center;
    align-items: center;
}
.dropdown:hover .scroll {
    transform: scaleY(-1);
    transition: transform 0.3s;
}
@media only screen and (max-width: 900px) {
    .hero-text h1 {
        /* font-family: 'Akira', sans-serif; */
    }
}
.texture, .blob-phone {
    pointer-events: none;
}
/* .left-section, .nav-bar ul {
    align-items: center;
} */
.header-bar {
    display: flex;
    justify-content: center;
    /* padding-right:0;
    padding-left: 0;  */
    width: 100vw;
}
.inside {
    display: flex;
    width: 100%;
    max-width: 1090px;
}
@media screen and (min-width: 1700px) {
    .inside {
        width: 1190px;
        max-width: none;
    }
}
#works {
    width: calc(100vw);
    /* background-color: pink; */
}
.tags {
    display: flex;
    flex-wrap: wrap;
    column-gap: 16px;
    row-gap: 16px;
}
.chip {
    background-color: #515a70aa;
    padding: 8px 12px;
    font-size: 13px;
    border-radius: 6px;
    /* border: rgba(255, 255, 255, 0.281) 1px solid; */
    font-weight: 400;
    text-transform: uppercase;
    min-width: fit-content;
}
/* .left-section, .nav-bar ul {
    align-items: center;
} */
.logo-header span{
    color: white;
    
}
.word1 {
    margin-bottom: 10px;
}
.introduction {
    background-color: black;
}

